First stab at login

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,3 +8,24 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+nav {
+    display: flex;
+    flex-direction: row;
+    padding: 0.5rem 1rem;
+    background-color: aliceblue;
+    border-bottom: 1px dotted lightblue;
+    margin: 0 0 0.5rem 0;
+}
+
+.brand {
+    font-size: 1.5rem;
+}
+
+.logout {
+    margin-left: auto;
+}
+
+.login {
+    margin-top: 2rem;
+}
